# MC-Mission-Mars

./: README.md  Rocket.blend  mars_ground (2).blend  sim1
launch/: swarmie.launch
mars_ground/: model.config  model.sdf
mars_ground/meshes/: Rocket.dae  mars_ground.dae
misc/: deploy.sh  nohup.out  rover_onboard_node_launch.sh
rocket/: model.config  model.sdf
rocket/meshes/: _apartment.dae.swp  _mars_ground.dae.swp  mars_ground.dae
src/abridge/: CMakeLists.txt
src/abridge/src/: DriveFix.cpp  DriveFix.h  PID_AutoTune.cpp  PID_AutoTune.h  PID_v1.cpp  PID_v1.h  Point.h  abridge.cpp
src/behaviours/src/: DriveController.h
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: MainLoop.cpp  MainLoop.cpp.autosave  SMACS.cpp  SMACS.h
src/controller/src/behaviors/: AvoidBehavior.cpp  AvoidBehavior.h  BehaviorInterface.h  BehaviorTypes.h  Behaviors.cpp  Behaviors.h  CalibrateBehavior.cpp  CalibrateBehavior.h  DriveBehavior.cpp  DriveBehavior.h  DropBehavior.cpp  DropBehavior.h  PickUpBehavior.cpp  PickUpBehavior.h  SearchBehavior.cpp  SearchBehavior.h  SearchForDropBehavior.cpp  SearchForDropBehavior.h  TriangulateBehavior.cpp  TriangulateBehavior.h
src/controller/src/controllers/: ClawController.cpp  ClawController.h  Controllers.cpp  Controllers.h  DriveController.cpp  DriveController.h  PID.cpp  Tag.cpp
src/controller/src/handlers/: Handlers.cpp  Handlers.h  Handlers.h.autosave  Tag.cpp
src/rqt_rover_gui/src/: GazeboSimManager.cpp  rover_gui_plugin.cpp  rover_gui_plugin.h  rover_gui_plugin.ui
